feat(cli): support `javadoc` and `jar` tools
feat(cli): implement `jar` tool support
feat(cli): implement `javadoc` tool support

Signed-off-by: Sam Gammon <sam@elide.dev>